// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form to add TOTP device 1`] = `
.c0 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c14 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c21:hover,
.c21:focus {
  background: #B29DFF;
}

.c21:active {
  background: #C5B6FF;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  text-align: center;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c19 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c19:hover,
.c19:focus,
.c19:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c19::-ms-clear {
  display: none;
}

.c19::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c19:read-only {
  cursor: not-allowed;
}

.c19:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c12 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c9 {
  display: block;
  outline: none;
  width: 152px;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  display: flex;
  align-items: center;
}

.c16 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c16 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c16 .react-select__control:hover,
.c16 .react-select__control:focus,
.c16 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control:hover .react-select__dropdown-indicator,
.c16 .react-select__control:focus .react-select__dropdown-indicator,
.c16 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__control .react-select__indicator:hover,
.c16 .react-select__control .react-select__dropdown-indicator:hover,
.c16 .react-select__control .react-select__indicator:focus,
.c16 .react-select__control .react-select__dropdown-indicator:focus,
.c16 .react-select__control .react-select__indicator:active,
.c16 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c16 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__single-value {
  color: #FFFFFF;
}

.c16 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c16 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c16 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c16 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c16 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c16 .react-select__clear-indicator:hover,
.c16 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__clear-indicator:hover svg,
.c16 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c16 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c16 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select--is-disabled,
.c16 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c16 .react-select--is-disabled .react-select__single-value,
.c16 .react-select__control--is-disabled .react-select__single-value,
.c16 .react-select--is-disabled .react-select__placeholder,
.c16 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c16 .react-select--is-disabled .react-select__indicator,
.c16 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c16 .react-select__input {
  color: #FFFFFF;
}

.c2 {
  width: 600px;
  padding: 24px;
  text-align: left;
  margin: 16px auto 16px auto;
  overflow-y: auto;
}

.c8 {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:800px) {
  .c2 {
    width: auto;
    margin: 20px;
  }
}

@media screen and (max-height:760px) {
  .c2 {
    height: calc(100vh - 250px);
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3"
    color="text.main"
  >
    Enroll New Two-Factor Device
  </div>
  <div
    class="c4"
    color="text.slightlyMuted"
  >
    Step 2 of 4
  </div>
  <div
    class="c5"
  >
    <div
      class="c6 c7 c8"
      height="256px"
    >
      <img
        class="c9"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        style="border: 8px solid;"
        width="152px"
      />
      <div
        class="c10"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code.
         
        <div
          class="c11"
          color="text.slightlyMuted"
        >
          We recommend
           
          <a
            class="c12"
            href="https://authy.com/download/"
            rel="noreferrer"
            target="_blank"
          >
            Authy
          </a>
          .
        </div>
      </div>
    </div>
    <div
      class="c0 c13"
    >
      <div
        class="c14"
        width="100%"
      >
        <label
          class="c15"
          font-size="0"
          for="select"
        >
          Two-factor Type
        </label>
        <div
          class="c16"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Authenticator App
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c17"
        width="50%"
      >
        <label
          class="c18"
          font-size="0"
        >
          Authenticator Code
          <input
            autocomplete="one-time-code"
            class="c19"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <div
      class="c20"
      width="100%"
    >
      <label
        class="c18"
        font-size="0"
      >
        Device Name
        <input
          autocomplete="off"
          class="c19"
          inputmode="text"
          placeholder="Name"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c21"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`render correct form to add Webauthn device 1`] = `
.c0 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c12 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c18:hover,
.c18:focus {
  background: #B29DFF;
}

.c18:active {
  background: #C5B6FF;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c17 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c17:hover,
.c17:focus,
.c17:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c17::-ms-clear {
  display: none;
}

.c17::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c17:read-only {
  cursor: not-allowed;
}

.c17:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c9 {
  display: block;
  outline: none;
  width: 152px;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
}

.c14 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c14 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__control:hover,
.c14 .react-select__control:focus,
.c14 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control:hover .react-select__dropdown-indicator,
.c14 .react-select__control:focus .react-select__dropdown-indicator,
.c14 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__control .react-select__indicator:hover,
.c14 .react-select__control .react-select__dropdown-indicator:hover,
.c14 .react-select__control .react-select__indicator:focus,
.c14 .react-select__control .react-select__dropdown-indicator:focus,
.c14 .react-select__control .react-select__indicator:active,
.c14 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c14 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__single-value {
  color: #FFFFFF;
}

.c14 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c14 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c14 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c14 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c14 .react-select__clear-indicator:hover,
.c14 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__clear-indicator:hover svg,
.c14 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c14 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c14 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select--is-disabled,
.c14 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c14 .react-select--is-disabled .react-select__single-value,
.c14 .react-select__control--is-disabled .react-select__single-value,
.c14 .react-select--is-disabled .react-select__placeholder,
.c14 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select--is-disabled .react-select__indicator,
.c14 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__input {
  color: #FFFFFF;
}

.c2 {
  width: 600px;
  padding: 24px;
  text-align: left;
  margin: 16px auto 16px auto;
  overflow-y: auto;
}

.c8 {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:800px) {
  .c2 {
    width: auto;
    margin: 20px;
  }
}

@media screen and (max-height:760px) {
  .c2 {
    height: calc(100vh - 250px);
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3"
    color="text.main"
  >
    Enroll New Two-Factor Device
  </div>
  <div
    class="c4"
    color="text.slightlyMuted"
  >
    Step 2 of 4
  </div>
  <div
    class="c5"
  >
    <div
      class="c6 c7 c8"
      height="256px"
    >
      <img
        class="c9"
        src="file_stub"
        width="152px"
      />
      <div
        class="c10"
      >
        Enter a name for your hardware key.
      </div>
    </div>
    <div
      class="c0 c11"
    >
      <div
        class="c12"
        width="100%"
      >
        <label
          class="c13"
          font-size="0"
          for="select"
        >
          Two-factor Type
        </label>
        <div
          class="c14"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c15"
      width="100%"
    >
      <label
        class="c16"
        font-size="0"
      >
        Device Name
        <input
          autocomplete="off"
          class="c17"
          inputmode="text"
          placeholder="Name"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c18"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`render correct form to add with multi option 1`] = `
.c0 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c12 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c18:hover,
.c18:focus {
  background: #B29DFF;
}

.c18:active {
  background: #C5B6FF;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c17 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c17:hover,
.c17:focus,
.c17:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c17::-ms-clear {
  display: none;
}

.c17::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c17:read-only {
  cursor: not-allowed;
}

.c17:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c9 {
  display: block;
  outline: none;
  width: 152px;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c11 {
  display: flex;
  align-items: center;
}

.c14 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c14 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c14 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__control:hover,
.c14 .react-select__control:focus,
.c14 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control:hover .react-select__dropdown-indicator,
.c14 .react-select__control:focus .react-select__dropdown-indicator,
.c14 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__control .react-select__indicator:hover,
.c14 .react-select__control .react-select__dropdown-indicator:hover,
.c14 .react-select__control .react-select__indicator:focus,
.c14 .react-select__control .react-select__dropdown-indicator:focus,
.c14 .react-select__control .react-select__indicator:active,
.c14 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c14 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c14 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c14 .react-select__single-value {
  color: #FFFFFF;
}

.c14 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c14 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c14 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c14 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c14 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c14 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c14 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c14 .react-select__clear-indicator:hover,
.c14 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c14 .react-select__clear-indicator:hover svg,
.c14 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c14 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c14 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c14 .react-select__indicator-separator {
  display: none;
}

.c14 .react-select__loading-indicator {
  display: none;
}

.c14 .react-select--is-disabled,
.c14 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c14 .react-select--is-disabled .react-select__single-value,
.c14 .react-select__control--is-disabled .react-select__single-value,
.c14 .react-select--is-disabled .react-select__placeholder,
.c14 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select--is-disabled .react-select__indicator,
.c14 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c14 .react-select__input {
  color: #FFFFFF;
}

.c2 {
  width: 600px;
  padding: 24px;
  text-align: left;
  margin: 16px auto 16px auto;
  overflow-y: auto;
}

.c8 {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:800px) {
  .c2 {
    width: auto;
    margin: 20px;
  }
}

@media screen and (max-height:760px) {
  .c2 {
    height: calc(100vh - 250px);
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3"
    color="text.main"
  >
    Enroll New Two-Factor Device
  </div>
  <div
    class="c4"
    color="text.slightlyMuted"
  >
    Step 2 of 4
  </div>
  <div
    class="c5"
  >
    <div
      class="c6 c7 c8"
      height="256px"
    >
      <img
        class="c9"
        src="file_stub"
        width="152px"
      />
      <div
        class="c10"
      >
        Enter a name for your hardware key.
      </div>
    </div>
    <div
      class="c0 c11"
    >
      <div
        class="c12"
        width="100%"
      >
        <label
          class="c13"
          font-size="0"
          for="select"
        >
          Two-factor Type
        </label>
        <div
          class="c14"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c15"
      width="100%"
    >
      <label
        class="c16"
        font-size="0"
      >
        Device Name
        <input
          autocomplete="off"
          class="c17"
          inputmode="text"
          placeholder="Name"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c18"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;

exports[`render failed state for form to add with multi option 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
  width: 100%;
}

.c6 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  padding: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 16px;
  height: 256px;
  border-radius: 8px;
}

.c13 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 100%;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c19:hover,
.c19:focus {
  background: #B29DFF;
}

.c19:active {
  background: #C5B6FF;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
  text-align: center;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-top: 16px;
}

.c18 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c18:hover,
.c18:focus,
.c18:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c18:read-only {
  cursor: not-allowed;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c14 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c10 {
  display: block;
  outline: none;
  width: 152px;
}

.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c12 {
  display: flex;
  align-items: center;
}

.c15 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c15 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c15 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c15 .react-select__control:hover,
.c15 .react-select__control:focus,
.c15 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c15 .react-select__control:hover .react-select__dropdown-indicator,
.c15 .react-select__control:focus .react-select__dropdown-indicator,
.c15 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c15 .react-select__control .react-select__indicator:hover,
.c15 .react-select__control .react-select__dropdown-indicator:hover,
.c15 .react-select__control .react-select__indicator:focus,
.c15 .react-select__control .react-select__dropdown-indicator:focus,
.c15 .react-select__control .react-select__indicator:active,
.c15 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c15 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c15 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c15 .react-select__single-value {
  color: #FFFFFF;
}

.c15 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c15 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c15 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c15 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c15 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c15 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c15 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c15 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c15 .react-select__clear-indicator:hover,
.c15 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__clear-indicator:hover svg,
.c15 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c15 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c15 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c15 .react-select__indicator-separator {
  display: none;
}

.c15 .react-select__loading-indicator {
  display: none;
}

.c15 .react-select--is-disabled,
.c15 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c15 .react-select--is-disabled .react-select__single-value,
.c15 .react-select__control--is-disabled .react-select__single-value,
.c15 .react-select--is-disabled .react-select__placeholder,
.c15 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c15 .react-select--is-disabled .react-select__indicator,
.c15 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c15 .react-select__input {
  color: #FFFFFF;
}

.c2 {
  width: 600px;
  padding: 24px;
  text-align: left;
  margin: 16px auto 16px auto;
  overflow-y: auto;
}

.c9 {
  background: rgba(255,255,255,0.07);
}

@media screen and (max-width:800px) {
  .c2 {
    width: auto;
    margin: 20px;
  }
}

@media screen and (max-height:760px) {
  .c2 {
    height: calc(100vh - 250px);
  }
}

<div
  class="c0 c1 c2"
>
  <div
    class="c3"
    color="text.main"
  >
    Enroll New Two-Factor Device
  </div>
  <div
    class="c4"
    color="text.slightlyMuted"
  >
    Step 2 of 4
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
      kind="danger"
      width="100%"
    >
      failed to add device
    </div>
    <div
      class="c7 c8 c9"
      height="256px"
    >
      <img
        class="c10"
        src="file_stub"
        width="152px"
      />
      <div
        class="c11"
      >
        Enter a name for your hardware key.
      </div>
    </div>
    <div
      class="c0 c12"
    >
      <div
        class="c13"
        width="100%"
      >
        <label
          class="c14"
          font-size="0"
          for="select"
        >
          Two-factor Type
        </label>
        <div
          class="c15"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  Hardware Key
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c16"
      width="100%"
    >
      <label
        class="c17"
        font-size="0"
      >
        Device Name
        <input
          autocomplete="off"
          class="c18"
          inputmode="text"
          placeholder="Name"
          type="text"
          value=""
        />
      </label>
    </div>
    <button
      class="c19"
      kind="primary"
      type="submit"
      width="100%"
    >
      Continue
    </button>
  </div>
</div>
`;
